--- a/alumni/templates/alumni/bio_form.html
+++ b/alumni/templates/alumni/bio_form.html
@@ -1,4 +1,5 @@
 {% extends "bios/bio_base.html" %}
+{% load crispy_forms_tags %}
 {% load bootstrap %}
 {% block post_content %}
 
@@ -6,7 +7,62 @@
   <h3>Create a New Bio</h3>
   <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form|bootstrap }}
+    <br>
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.name|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-6 mb-0">
+        {{ form.program|as_crispy_field }}
+      </div>
+    </div>
+    <br>
+    <br>
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.branch|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-6 mb-0">
+        {{ form.year_of_graduation|as_crispy_field }}
+      </div>
+    </div>
+    <br>
+    <br>
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.number|bootstrap }}
+      </div>
+      <div class="form-group col-md-6 mb-0">
+        {{ form.junior_intraction|bootstrap }}
+      </div>
+    </div>
+    <br>
+    <br>
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.present_work|bootstrap }}
+      </div>
+      <div class="form-group col-md-6 mb-0">
+        {{ form.present_work_org|bootstrap }}
+      </div>
+    </div>
+    <br>
+    <br>
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.facebook|bootstrap }}
+      </div>
+      <div class="form-group col-md-6 mb-0">
+        {{ form.linkedin|bootstrap }}
+      </div>
+    </div>
+    <br>
+    <br>
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.picture|bootstrap }}
+      </div>
+    </div>
     <input type="submit" value="Submit" class="btn btn-large btn-primary">
   </form>
 </div>
