--- a/bios/templates/bios/bio_list.html
+++ b/bios/templates/bios/bio_list.html
@@ -10,19 +10,10 @@
 	<h1>Filter:</h1>
 	<form method="GET" class="">
 		{{filter.form|bootstrap}}
-		<!--{% for i in filter.form %}
-		<div class="dropdown">
-			<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				{{i.label}}
-			</button>
-			<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-				{{i|bootstrap}}
-			</div>
-		</div>
 		<br>
-		{% endfor %}--><br>
-		<button type="submit" class="btn btn-outline-success btn-lg">Search</button>
-		<a href="{% url 'bios:all' %}" class="btn btn-outline-danger btn-sm">Clear</a>
+		<button type="submit" class="btn btn-outline-success"><a>Search</a></button>
+		<button type="button" class="btn btn-outline-danger"><a href="{% url 'bios:all' %}">Clear</a></button>
+		
 	</form>
 </div>
 <div id="main">
