--- a/bios/templates/bios/bio_base.html
+++ b/bios/templates/bios/bio_base.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-{% block body_block %}
+{% block content %}
+<br><br><br><br><br>
     <div class="">
       {% block prepost %}{% endblock %}
       {% block post_content %}{% endblock %}
