--- a/alumni/templates/alumni/bio_form.html
+++ b/alumni/templates/alumni/bio_form.html
@@ -7,6 +7,7 @@
   <h3>Create a New Bio</h3>
   <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
+    {{form.media}}
     <br>
     <div class="form-row">
       <div class="form-group col-md-6 mb-0">
@@ -61,6 +62,34 @@
     <div class="form-row">
       <div class="form-group col-md-6 mb-0">
         {{ form.picture|bootstrap }}
+      </div>
+      <div class="form-group col-md-6 mb-0">
+        {{ form.profile_of_intrest|bootstrap }}
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.intern_experience|bootstrap }}
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.club_memories|bootstrap }}
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.project_memories|bootstrap }}
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.por_experience|bootstrap }}
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.placement_experince|bootstrap }}
       </div>
     </div>
     <input type="submit" value="Submit" class="btn btn-large btn-primary">
