--- a/alumni/templates/alumni/bio_base.html
+++ b/alumni/templates/alumni/bio_base.html
@@ -1,14 +1,108 @@
-{% extends "base.html" %}
-{% block body_block %}
+{% extends "base.html" %} {% load static %} {% block css %}
+<style>
+    .carousel-item {
+        height: 100vh;
+        background: no-repeat center center scroll;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+    
+    .content {
+        text-align: center;
+        padding-top: 5%;
+        padding-right: 4%;
+        padding-left: 60%;
+        color: white;
+    }
+    
+    .carousel-item-content {
+        /* margin-top: 20%;
+  margin-left: 15%;
+  margin-right: 30%; */
+        font-size: 24px;
+    }
+    
+    .carousel-item-screen {
+        color: white;
+        background-color: rgba(0, 0, 0, 0.6);
+        width: 100%;
+        height: 100%;
+        padding: 15% 20% 0 15%;
+    }
+    
+    .link-button {
+        color: white;
+        background-color: #555555;
+        display: inline-block;
+        text-decoration: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
+    
+    .link-button:hover {
+        text-decoration: none;
+        color: white;
+        background-color: #222222;
+        display: inline-block;
+        text-decoration: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
+</style>
 
-    <div class="">
-      {% block prepost %}{% endblock %}
-      {% block post_content %}{% endblock %}
-      {% block postpost %}{% endblock %}
+{% endblock %} {% block carousel %} {% if user.is_authenticated %}
+<!-- <br><br>
+<div class="alert alert-success" style="padding-left: 40%;" role="alert">
+  WELCOME {{user.first_name}},<br>
+  You are now Logged in
+</div>
+{% endif %} -->
+<div id="carouselExampleIndicators" class="carousel slide my-carousel
+    my-carousel" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active" style="background-image:
+        url('{% block navimg %}https://live.staticflickr.com/7415/11546057593_1f49a71617_b.jpg{% endblock navimg %}'); opacity: 0.8;">
+            <div class="carousel-item-screen">
+                <div class="carousel-item-content">
+
+                    {% block navcontent %} {% endblock navcontent %}
+
+
+                </div>
+
+
+            </div>
+
+        </div>
+
+
+
+
+
+
+
+        <!-- <div class="carousel-item" data-interval="9000">
+      <video autoplay muted loop width="100%" height="130%" id="myVideo">
+        <source src="https://drive.google.com/uc?export=download&id=1EZyLXoTGOUd2YLC11fzvXRCZ-vTVzta9" type="video/mp4">
+      </video>
+
+    </div> -->
+
     </div>
 
 
-{% endblock %}
-{% block extrajs %}
+</div>
 
-{% endblock %}
+{% endblock %} {% block content %}
+<br><br><br><br><br>
+<div class="">
+    {% block prepost %}{% endblock %} {% block post_content %}{% endblock %} {% block postpost %}{% endblock %}
+</div>
+
+
+{% endblock %} {% block extrajs %} {% endblock %}
